[package]
name = "rpaudio"
version = "0.0.4"
edition = "2021"

[dependencies]
audiotags = "0.5.0"
id3 = "1.14.0"
pyo3 = { version = "0.22.2", features = ["full", "abi3-py38"] }
rodio = "0.19.0"
hound = "3.5.1"
alsa = {version = "0.9.1", optional = true }


[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rpaudio"


[features]
default = ["pyo3/extension-module"]
alsa-backend = ["alsa"]
