[package]
name = "rpaudio"
version = "0.0.15"
edition = "2021"

[dependencies]
audiotags = "0.5.0"
id3 = "1.14.0"
pyo3 = { version = "0.22.2", features = ["full", "abi3-py38"] }
rodio = "0.19.0"
hound = "3.5.1"
alsa = {version = "0.9.1", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rust_decimal = "1.36.0"


[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rpaudio"

[tool.maturin]
python-source = "python"

[features]
default = ["pyo3/extension-module"]
alsa-backend = ["alsa"]
