[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rpaudio"
version = "0.0.3"
authors = [
  { name="Ryan Skiles", email="r.p.skiles@gmail.com" },
  { name="Beaux44"}
]
description = "Rust audio api binding for python"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sockheadrps/rpaudio"
Issues = "https://github.com/sockheadrps/rpaudio/issues"
